# FlightControl

./: README.md  partitions.csv  sdkconfig
FlightControl/: example_flight_control.c
FlightControl/ekf/: Makefile  ekf_quat.h  example_usage.c  quaternion_math.h
esp32 c3 Super Mini/: sdkconfig
esp32 c3 Super Mini/main/: CMakeLists.txt  ak8963.c  ak8963.h  ble_tuner.c  control_types.h  ekf_quat.c  ekf_quat.h  fc_error.c  fc_error.h  helper.c  i2c_driver.c  i2c_driver.h  main.c  matrix_math.h  ota_update.c  ota_update.h  rate_controller.h  sbus_receiver.c  sbus_receiver.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  attitude_controller.h  control_types.h  flight_controller.h  i2c_driver.h  main.c  matrix_math.c  motor_mixer.c  mpu9250.h  pid_controller.c  quaternion_math.c  rate_controller.c
wrover-e/: CMakeLists.txt  attitude_controller.c  ble_tuner.h  ekf_quat.c  flight_controller.c  helper.c  helper.h  i2c_driver.c  ism330dhcx_esp32.c  ism330dhcx_esp32.h  main.c  motor_mixer.h  mpu9250.c  pid_controller.h
