idf_component_register(SRCS "helper.c" "ble_tuner.c" "quaternion_math.c"
 "matrix_math.c" 
 "ekf_quat.c" 
 "rate_controller.c" 
 "attitude_controller.c" 
 "motor_mixer.c"
 "pid_controller.c"
 "i2c_driver.c"
 "mpu9250.c"
 "ak8963.c"
 "wifi_manager.c"
 "ota_update.c"
 "sbus_receiver.c"
 "web_server.c"
 "fc_error.c"
 "ton.c"
 "edge_detection.c"
 "main.c"
                    INCLUDE_DIRS ".")